# session-control

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LESSONSLEARNED.md  README.md  REFS-PUBLIC.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  secret-scan.yml
config/: session-control.env.example
config/clockwork/: prune-sessions.toml.template
docs/: contributor-architecture-blueprint.md  wiring-harness.md
docs/diagrams/: python-classes.puml  python-packages.puml  repo-architecture.drawio  repo-architecture.puml  shell-call-graph.puml  tooling-integrations.puml
scripts/: install_prune_timer.sh  install_web_service.sh
src/session_control/: __init__.py  __main__.py  actions.py  claude_status.py  cli.py  codex_permissions.py  config.py  dedup.py  models.py  scanner.py  web.py
src/session_control/static/: app.js  styles.css
src/session_control/templates/: detail.html  index.html
tests/: __init__.py  conftest.py  helpers.py  test_actions.py  test_claude_status.py  test_cli.py  test_scanner.py  test_web.py
